2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't chmod +x test/{runtest,show-platform}.

	* Makefile.am (TESTS_ENVIRONMENT): Invoke w/ sh(1).
	* show-platform.in: Update usage comment; nfc.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Use $srcdir in runtest.

	* runtest.in (ts): Delete var;
	in Guile invocation, use ‘$srcdir’ directly.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Don't "manually load" anything.

	* meta.scm: Don't ‘manually-load’ any Guile-PG modules.
	* types-table.scm: Likewise.
	* testing.scm (manually-load): Delete proc.
	* runtest.in (tscm): Delete var.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Instantiate test/show-platform at configure-time.

	* show-platform.in: New file.
	* show-platform: Delete file.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Make partial install depend on ../src "make all".

	Omission from 2011-05-14, "Do a partial
	install under test/; point ‘%load-path’ there".

	* Makefile.am (fake-install): Depend on ../src/stamp-all;
	also, delete any previous tree before starting.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build inst] Add support for "no C module" mode.

	* Makefile.am (fake-install): For sub-"make install",
	set makefile variable ‘FOR_MAKE_CHECK’.

2011-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Do a partial install under test/; point ‘%load-path’ there.

	* Makefile.am (check_DATA): New var.
	(fake-install, clean-local): New targets.
	* runtest.in: Don't set and export env var ‘GUILE_LOAD_PATH’;
	add check for "proper" GUILE_LIBSITE; bail if improper;
	arrange for ‘@GUILE_LIBSITE@’ to expand to the one under
	the ./fake-install; display it if env var ‘DEBUG’ set;
	add ‘-L "@GUILE_LIBSITE@"’ in args to the guile invocation.

2011-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Allow env var ‘GUILE’ to override that in runtest.

	* runtest.in: Use env var ‘GUILE’ if set, instead of @GUILE@.
